# parco-hbm

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: artefacts.yaml  nanopub.yaml  wheels.yaml
diagrams/: README.md  mermaid_generated.uml
linkml/: README.md
linkml/ObservableProperty/: biochementity.yaml  indicator.yaml  observableproperty.yaml
linkml/changelog/: _upcoming.yaml  changelog.schema.yaml  example.yaml  unpublished.yaml
linkml/data/: BioChemEntityList_data.yaml  BioChemGroupList_data.yaml  BioChemGroupingList_data.yaml  GroupingList_data.yaml  IndicatorList_data.yaml  MatrixList_data.yaml  ObservablePropertyGroupList_data.yaml  ObservablePropertyList_data.yaml  ObservablePropertyMetadataFieldList_data.yaml  ProjectList_data.yaml  StakeholderList_data.yaml  StudyList_data.yaml  TimepointList_data.yaml  _added.yaml
linkml/extract/: BioChemEntityList_data.yaml  IndicatorList_data.yaml  MatrixList_data.yaml  ObservablePropertyList_data.yaml
linkml/jsonld/: peh.context.jsonld  peh.jsonld
linkml/model/: biochementity.yaml  dataextract.yaml  indicator.yaml  observableproperty.yaml  project.yaml  unit.yaml
linkml/owl/: peh.owl
linkml/pydantic/: Project_data.yaml  Usage.ipynb  peh-model.py  peh.py
linkml/python/: INQUIRE_load_from_epiinfo.ipynb  PARC_load_from_basic_codebook.ipynb  Usage.ipynb  extract_indicators.ipynb  peh.py  pydanticmodel_v2.py
linkml/rdf/: peh.ttl
linkml/schema/: peh-model.yaml  peh.yaml  (+1 more)
requirements/: publish.txt
src/: README.md  issue_template.md
terms/: terms.yml
(+131 files in other folders)
