[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peh-model"
version = "0.0.1"
description = "Python package for Project Entity Harmonization (PEH)"
readme = "README.md"
authors = [
    {name = "Dirk Devriendt", email = "dirk.devriendt.ext@vito.be"},
    {name = "Gertjan Bisschop", email = "gertjan.bisschop@vito.be"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "linkml-runtime"
]

[project.urls]
"Homepage" = "https://github.com/eu-parc/parco-hbm"
"Bug Tracker" = "https://github.com/eu-parc/parco-hbm/issues"

[tool.setuptools.packages.find]
where = ["linkml/src"]

[tool.setuptools.package-data]
"peh" = ["py.typed", "schema/peh.yaml"]